2011-10-14  Thien-Thi Nguyen  <ttn@gnuvola.org>

	[int] Remove ‘jstuff’ from global state of co(1).

	* co.c (jstuff): Delete var.
	(jpush): Take 2nd arg ‘js’; use ‘js->’.
	(addjoin): Take 2nd arg ‘js’; update call to ‘jpush’.
	(preparejoin): Take 2nd arg ‘js’; use ‘js->’;
	update call to ‘addjoin’, ‘jpush’.
	(buildjoin): Take 2nd arg ‘js’; use ‘js->’.
	(main): Add auto var ‘jstuff’;
	update calls to ‘preparejoin’, ‘buildjoin’.

2011-10-14  Thien-Thi Nguyen  <ttn@gnuvola.org>

	[int] Remove ‘workstat’ from global state of co(1).

	* co.c (struct work): New.
	(workstat): Delete var.
	(rmworkfile): Take arg ‘work’; use ‘work->st’.
	(main): Add auto var work; use ‘work.st’;
	update calls to ‘rmworkfile’.

2011-10-14  Thien-Thi Nguyen  <ttn@gnuvola.org>

	[int] Remove ‘insDelFormat’ from global state of rlog(1).

	* rlog.c (insDelFormat): Delete var.
	(putadelta): Take 4th arg ‘insDelFormat’.
	(putrunk): Take arg ‘insDelFormat’; update call to ‘putadelta’.
	(putforest): Update forward func decl.
	(putree): Take 2nd arg ‘insDelFormat’;
	update calls to self, ‘putforest’.
	(putabranch): Take 2nd arg ‘insDelFormat’;
	update calls to self, ‘putadelta’.
	(putforest): Take 2nd arg ‘insDelFormat’;
	update calls to self, ‘putabranch’, ‘putree’.
	(main): Add auto var ‘insDelFormat’.

2011-10-14  Thien-Thi Nguyen  <ttn@gnuvola.org>

	[int] Remove ‘Revlst’ from global state of rlog(1).

	* rlog.c (struct criteria): Add member ‘actual’.
	(Revlst): Delete var.
	(extractdelta, getnumericrev): Use ‘criteria->actual’.

2011-10-14  Thien-Thi Nguyen  <ttn@gnuvola.org>

	[int] Remove ‘statelist’ from global state of rlog(1).

	* rlog.c (struct criteria): Add member ‘states’.
	(statelist): Delete var.
	(extractdelta): Use ‘criteria->states’.
	(getstate): Take 2nd arg ‘criteria’; use ‘criteria->states’.
	(main): Update initialization form of auto var ‘criteria’;
	update call to ‘getstate’.

2011-10-14  Thien-Thi Nguyen  <ttn@gnuvola.org>
